# polars_profile

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  run.py  test.ipynb
polars_profile/: __init__.py
src/: expressions.rs
tests/: test_profile.py
