[package]
name = "polars-profile"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_profile"
crate-type= ["cdylib", "rlib"]

[dependencies]
argminmax = { version = "0.6.2", default-features = false }
pyo3 = { version = "0.22.2", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.17.0", features = ["derive", "dtype-struct"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.43.0", features=["dtype-struct"], default-features = false }


[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]